--- a/vite-project/src/components/Footer/Footer.module.css
+++ b/vite-project/src/components/Footer/Footer.module.css
@@ -86,36 +86,50 @@
 
 @media (max-width: 768px) {
   .rectangle5746 {
-    width: 94vh;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
   }
 
   .sNOWBELL {
-    left: 60vh;
-    margin-top: 20%;
-
-    /* transform: translateX(-50%); */
+    position: static;
+    margin: 20px auto 10px;
+    font-size: 40px;
+    padding: 10px;
   }
 
   .whenLifeGetsHotBeASnowbell {
-    position: absolute;
-    left: 60vh;
-    margin-top: 43%;
-    font-size: 14px;
+    margin: auto;
+    font-size: 16px;
+    margin-left: 136px;
+
+    padding: 10px;
   }
 
   .ex1 {
-    left: 60vh;
-    margin-top: 55%;
-    background-image: url("../../assets/ex1.png");
+    /* position: static; */
+    /* margin: 65px 10px; */
+    width: 40px;
+    height: 30px;
+    margin-left: 160px;
+    margin-right: 100px;
+    margin-top: 24px;
+    padding: 10px;
+  }
+  .telegram11 {
+    width: 40px;
+    height: 30px;
+    margin-top: 24px;
+
+    margin-left: 200px;
+    padding: 10px;
+
+    /* margin-top: 85px; */
   }
 
-  .telegram11 {
-    /* left: 1300.4843px; */
-    left: 50vh;
-    margin-top: 55%;
-    width: 64.5886px;
-    height: 49.7804px;
-    background-image: url("../../assets/telegram11.png");
+  .file161 {
+    display: none; /* Hide the background image for smaller screens */
   }
 }
